--- a/layouts/partials/meta_json_ld.html
+++ b/layouts/partials/meta_json_ld.html
@@ -24,7 +24,7 @@
     {{ with $.Param "image" -}}
     "image" : {{ . | absURL }},
     {{ end -}}
-    {{ with $.Param "author" -}}
+    {{ with $.Page.Params.author | default site.Params.author.name -}}
     "author": {
       "@type": "Person",
       "name": {{ . }}
