Use PublishDate instead of Date
The publish date is what this author finds more relevant.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -13,7 +13,7 @@
 <div class="content content--bottom">
 {{ if $.Param "relatedposts" | default false }}{{ partial "related.html" . }}{{ end -}}
 
-{{ if ne .Lastmod .Date }}{{ partial "dates.html" . }}{{ end -}}
+{{ if ne .Lastmod .PublishDate }}{{ partial "dates.html" . }}{{ end -}}
 </div>
 </article>
 </main>
