--- a/layouts/partials/author-date.html
+++ b/layouts/partials/author-date.html
@@ -1,3 +1,3 @@
 {{ with .Page.Params.author | default site.Params.author.name }}<span class="author" itemprop="author">{{ . }}</span>{{ end -}}
-{{ if and .Date (or .Page.Params.author site.Params.author.name) }} - {{ end -}}
-{{ with .Date }}<time class="created-date" datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">{{ .Format ($.Param "dateformat" | default "2 January, 2006") }}</time>{{ end }}
+{{ if and .PublishDate (or .Page.Params.author site.Params.author.name) }} - {{ end -}}
+{{ with .PublishDate }}<time class="created-date" datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">{{ .Format ($.Param "dateformat" | default "2 January, 2006") }}</time>{{ end }}
