--- a/layouts/partials/meta_json_ld.html
+++ b/layouts/partials/meta_json_ld.html
@@ -4,7 +4,7 @@
     {{ if .IsPage -}}
     "@type": {{ if or (eq .Section "blog") (eq .Section "post") }}"BlogPosting"{{ else }}"WebPage"{{ end }},
     "headline": {{ .Title }},
-    "datePublished": {{ .Date.Format "2006-01-02T15:04:05Z07:00" }},
+    "datePublished": {{ .PublishDate.Format "2006-01-02T15:04:05Z07:00" }},
     "dateModified": {{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }},
     "url" : {{ .Permalink }},
     {{ with (.Description | default (replaceRE "\n" " " (.Plain | truncate 170))) -}}
