Tweak date display and handling
Differentiate between created and published date. Also update RSS to use
lastmod as RSS build date.

--- a/layouts/partials/dates.html
+++ b/layouts/partials/dates.html
@@ -1,4 +1,9 @@
 <div class="content-dates meta">
 {{ i18n "last_mod" }} {{ .Lastmod.Format ($.Param "dateformat" | default "2 January, 2006") }}<br>
-{{ i18n "created" }} {{ .PublishDate.Format ($.Param "dateformat" | default "2 January, 2006") }}
+{{- if not .Date.IsZero }}
+{{ i18n "created" }} {{ .Date.Format ($.Param "dateformat" | default "2 January, 2006") }}
+{{ end -}}
+{{- if not .PublishDate.IsZero }}
+{{ i18n "published" }} {{ .PublishDate.Format ($.Param "dateformat" | default "2 January, 2006") }}
+{{ end -}}
 </div>
