Omit Netlify 'index' files as home alternatives
They aren't deployed to the site, they are used to control the deploy
process, so they should not be visible on the resulting site.

--- a/layouts/partials/feedlinks.html
+++ b/layouts/partials/feedlinks.html
@@ -1,4 +1,4 @@
-{{ $list := .AlternativeOutputFormats -}}
+{{ $list := where .AlternativeOutputFormats "Name" "not in" (slice "nredirects" "nheaders") -}}
 {{ $length := (len $list) -}}
 {{ if $list -}}
 <p>{{ i18n "string_follow" | title }}{{ with .Section }} {{ . }}{{ end }}: {{ range $index, $element := $list -}}
