--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -8,6 +8,7 @@
 {{ with $.Param "contact" }}<meta name="contact" content="{{ . }}">{{ end }}
 <meta property="og:site_name" content="{{ site.Title }}">
 <meta property="og:title" content="{{ .Title }}">
+<meta property="og:description" content="{{ with (.Description | default (replaceRE "\n" " " (.Plain | truncate 170))) }}{{ . }}{{ end }}">
 <meta property="og:url" content="{{ .Permalink }}">
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}">
 {{ with $.Param "image" }}<meta property="og:image" content="{{ . | absURL }}">{{ end }}
@@ -16,7 +17,13 @@
 <meta name="theme-color" content="{{ $.Param "themecolor" | default "#ffffff" }}">
 {{ with site.Params.piwikTrackerUrl }}<link rel="dns-prefetch" href="https://{{ . }}">{{ end }}
 {{ with $.Param "microusername" }}<link rel="me" href="https://micro.blog/{{ . }}">{{ end }}
+{{- if not (or (isset .Params "pagecanonical") (isset site.Params "pagecanonical")) -}}
 <link rel="canonical" href="{{ .Permalink }}">
+{{- else if $.Param "pageCanonical" -}}
+<link rel="canonical" href="{{ .Permalink }}">
+{{- else if $.Param "toCanonical" -}}
+<link rel="canonical" href="{{ $.Param "toCanonical" }}">
+{{- end -}}
 {{ if .IsTranslated -}}
 {{ range .Translations }}
 <link rel="alternate" hreflang="{{ .Language.Params.LanguageCode | default .Lang }}" href="{{ .Permalink }}">
