Make page header styling the same on all pages
With the removal of the site header as an h1 element, except on the home
page we need to update the styles on the non-home pages.

--- a/assets/sass/components/header/_header.scss
+++ b/assets/sass/components/header/_header.scss
@@ -23,6 +23,11 @@
 
   // The name of the website.
   &__site-name {
+    color: var(--color-headings);
+    font-family: var(--ff-headings);
+    font-size: var(--fs-xxl);
+    font-weight: var(--fw-headings);
+    line-height: var(--heading-line-height);
     margin: 0;
   }
 
