Add option to make responsive images the default
When render-image hook is live and not just an example and/or when using
the figure or img shortcodes, and the
noSrcSetDefault param is false.

--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -2,9 +2,9 @@
 {{ $class := "" -}}
 {{/* When noImageConvert is false, convert all Markdown images to specified format (default 'webp') */ -}}
 {{ $convertTo := cond (ne .Page.Param "noImageConvert" false) "" (.Page.Param "imageConvertTo" | default "webp") -}}
-{{ $size := "" -}}
+{{ $size := .Page.Params.imageSize | default site.Params.imageSize | default "" -}}
 {{/* When noSrcSetMarkdown is false, use specified breakpoints for a srcset (default below) */ -}}
-{{ $srcset := cond (ne .Page.Param "noSrcSetMarkdown" false) "" (.Page.Param "imageSrcSet" | default "480 720 1080 1280 1600 2048") -}}
+{{ $srcset := cond (ne .Page.Param "noSrcSetDefault" false) "" (.Page.Param "imageSrcSet" | default "480 720 1080 1280 1600 2048") -}}
 {{ $width := "" -}}
 
 {{/* Only change the code below if you know what you are doing. */}}
