Add option to convert image format
When the render-image hook is live and/or
when using the img or figure shortcodes, and noImageConvert is false.
Defaults to webp but can be changed via the imageConvertTo parameter.
Currently only used if size or srcset is set.

--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -3,6 +3,8 @@
 {{ $attrlink := .Get "attrlink" -}}
 {{ $caption := .Get "caption" -}}
 {{ $class := .Get "class" -}}
+{{/* When noImageConvert is false, convert all images to specified format (default 'webp') */ -}}
+{{ $convertTo := .Get "convertTo" | default (cond (ne .Page.Param "noImageConvert" false) "" (.Page.Param "imageConvertTo" | default "webp")) -}}
 {{ $height := .Get "height" -}}
 {{ $link := .Get "link" -}}
 {{ $size := .Get "size" | default .Page.Params.imageSize | default site.Params.imageSize -}}
@@ -37,7 +39,7 @@
 
 {{ if $resource -}}
   {{ if $size -}}
-    {{ $image := $resource.Resize $size -}}
+    {{ $image := $resource.Resize (printf "%s %s" $size $convertTo) -}}
     {{ $src = $image.RelPermalink -}}
     {{ $width = $image.Width -}}
     {{ $height = $image.Height -}}
@@ -51,7 +53,7 @@
   {{ end -}}
   {{ if $srcset -}}
     {{ range $set := split $srcset " " -}}
-      {{ $image := $resource.Resize (printf "%sx" $set) -}}
+      {{ $image := $resource.Resize (printf "%sx %s" $set $convertTo) -}}
       {{ $srcsetw = $srcsetw | append (printf "%s %sw" $image.RelPermalink $set) }}
     {{ end }}
     {{ $width = "" -}}
