--- a/layouts/shortcodes/contact.html
+++ b/layouts/shortcodes/contact.html
@@ -7,6 +7,7 @@
   <input type="text" id="edit-name" name="name" placeholder="{{ i18n "contact_name_placeholder" }}" required autofocus>
   <label for="edit-mail">{{ i18n "contact_mail" }}</label>
   <input type="email" id="edit-mail" name="email" placeholder="{{ i18n "contact_mail_placeholder" }}" required>
+  <label for="edit-url" class="hidden">Enter a value if you are not human</label>
   <input type="text" id="edit-url" class="hidden" name="url" placeholder="{{ i18n "contact_honeypot" }}">
   <label for="edit-subject">{{ i18n "contact_subject" }}</label>
   <input type="text" id="edit-subject" name="subject" placeholder="{{ i18n "contact_subject_placeholder" }}" required>
