--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -1,20 +1,21 @@
 {{- $ctx := . -}}
 {{- $pctx := .Page -}}
 {{- $caller := .Caller -}}
+{{- $class := .class | default (printf "%s%s" "list-view" (cond (ne $pctx.Section "") (printf "list-view--%s"  (. | urlize )) "")) -}}
 {{- $showSummaries := (cond (isset $caller.Params "showsummaries") ($caller.Params.showSummaries) true) -}}
 {{- if not (isset $caller.Params "showsummaries") -}}
   {{- $showSummaries = (cond (isset site.Params "showsummaries") (site.Params.showSummaries) true) -}}
 {{- end -}}
-<article class="list-view{{ with $pctx.Section }} list-view--{{ . | urlize }}{{ end }}">
+<article class="{{ $class }}">
 <header>
-<h2 class="title {{ if $pctx.Param "submitted" | default false }}title-submitted{{ end }}"><a href="{{ .RelPermalink }}">{{ $pctx.Title }}</a></h2>
+<h2 class="title {{ if $pctx.Param "submitted" | default false }}title-submitted{{ end }}"><a href="{{ $pctx.RelPermalink }}">{{ $pctx.Title }}</a></h2>
 {{ if $showSummaries }}
 {{ if $pctx.Param "submitted" | default false }}{{ partial "submitted.html" $pctx -}}{{ end }}
 {{ end }}
 </header>
 {{ if $showSummaries }}
 <div class="content">
-<p>{{ $pctx.Summary }}</p>
+<p>{{ ($pctx.Param "summary" | default ($pctx.Summary | plainify)) | $pctx.RenderString | htmlEscape }}</p>
 </div>
 {{ end }}
 </article>
