Add workaround for imageConfig vs fileExists
fileExists searches both theme directory and the project directory
but imageConfig only searches project directory.
This results in inability to use fileExists to avoid errors with
imageConfig when file not present. So, we create a workaround.

--- a/layouts/partials/helpers/process-images.html
+++ b/layouts/partials/helpers/process-images.html
@@ -15,8 +15,12 @@
 {{ $static := false -}}
 
 {{ with $page -}}
-  {{ if and $src (fileExists (path.Join "/static" $src)) -}}
-    {{ with (imageConfig (path.Join "/static" $src)) -}}
+  {{ $srcPath := path.Join "/static" $src -}}
+  {{ $srcDir := path.Dir $srcPath -}}
+  {{ $dirFiles := readDir $srcDir -}}
+  {{ $fileInDir := in $dirFiles (path.Base $srcPath) -}}
+  {{ if and $src (fileExists (path.Join "/static" $src)) $fileInDir -}}
+    {{- with (imageConfig (path.Join "static" $src)) -}}
       {{ $realwidth = .Width -}}
       {{ $realheight = .Height -}}
     {{ end -}}
