When converting format don't require Resize
Make sure that images are converted, when conversion is specified, even
when no image resize is needed.

--- a/layouts/partials/helpers/process-images.html
+++ b/layouts/partials/helpers/process-images.html
@@ -49,6 +49,10 @@
       {{ $src = $resource.RelPermalink -}}
       {{ $realwidth = $resource.Width -}}
       {{ $realheight = $resource.Height -}}
+      {{ $image := $resource.Resize (printf "%dx%d %s" $realwidth $realheight $convertTo) -}}
+      {{ $src = $image.RelPermalink -}}
+      {{ $width = $image.Width -}}
+      {{ $height = $image.Height -}}
     {{ end -}}
     {{ if $srcset -}}
       {{ range $set := split $srcset " " -}}
