Reduce header bottom margin
Upstream added 'mb--m' which is far to large a gap.

Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
 
 <body class="{{ if .IsPage }}single-page{{ else }}list-page{{ end }}{{ if .IsHome }} front{{ end }}{{ with $.Param "bodyclass" }} {{ . }}{{ end }}">
 <div class="page layout__page{{ if $.Param "sidebar" }} layout__sidebar-second{{ end }}">
-<header class="header layout__header mb--m">
+<header class="header layout__header">
 {{ if $.Param "logo" | default true -}}
 <a href="{{ "" | relLangURL }}" title="Home" rel="home" class="header__logo">
 {{ $src := ($.Param "logoPath") | default "images/logo.png" -}}
