Fix summary and card classes to use section
There is the generic card or list-view class, but we now make sure the
more specific class correct uses the section name in the class name.

--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -1,7 +1,7 @@
 {{- $ctx := . -}}
 {{- $pctx := .Page -}}
 {{- $caller := .Caller -}}
-{{- $class := .class | default (printf "%s%s" "list-view" (cond (ne $pctx.Section "") (printf "list-view--%s"  (. | urlize )) "")) -}}
+{{- $class := .class | default (printf "%s %s" "list-view" (cond (ne $pctx.Section "") (printf "list-view--%s"  ($pctx.Section | urlize )) "")) -}}
 {{- $showSummaries := (cond (isset $caller.Params "showsummaries") ($caller.Params.showSummaries) true) -}}
 {{- if not (isset $caller.Params "showsummaries") -}}
   {{- $showSummaries = (cond (isset site.Params "showsummaries") (site.Params.showSummaries) true) -}}
