Style the table of contents
And make it ordered (this is a per-site setting in Hugo's configuration)

--- a/assets/sass/_zen.scss
+++ b/assets/sass/_zen.scss
@@ -299,3 +299,13 @@ figure {
     }
   }
 }
+
+.toc {
+  background-color: var(--color-brand-light);
+  padding-bottom: .1rem;
+  padding-top: .1rem;
+
+  nav {
+    font-family: var(--ff-body);
+  }
+}
