--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -15,7 +15,7 @@
 </header>
 {{ if $showSummaries }}
 <div class="content">
-<p>{{ ($pctx.Param "summary" | default ($pctx.Summary | plainify)) | $pctx.RenderString | htmlEscape }}</p>
+<p>{{ ($pctx.Param "summary" | (default $pctx.Summary | plainify) | $pctx.RenderString | safeHTML}}</p>
 </div>
 {{ end }}
 </article>
