--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -8,7 +8,7 @@
 {{- end -}}
 <article class="{{ $class }}">
 <header>
-<h2 class="title {{ if $pctx.Param "submitted" | default false }}mb--xxs{{ end }}"><a href="{{ $pctx.RelPermalink }}">{{ $pctx.Title }}</a></h2>
+<h2 class="title {{ if $pctx.Param "submitted" | default false }}mb--xxs{{ end }}"><a href="{{ $pctx.RelPermalink }}">{{ $pctx.Title }}</a>{{ if $pctx.Pages }} <span class="page-count">({{ len $pctx.Pages }}){{ end }}{{ if $pctx.Data.Term }} [{{ $pctx.Data.Term }}]{{ end }}</span></h2>
 {{ if $showSummaries }}
 {{ if $pctx.Param "submitted" | default false }}{{ partial "submitted.html" $pctx -}}{{ end }}
 {{ end }}
